src/objects/IRIS_Submission_Assessment__c.object
<CustomObject>
    <description>Represents the assessment taken on a submitted document</description>
    <fields>
        <fullName>Actual_Score__c</fullName>
        <description>Stores the sum up of all the actual score from the assessment data.</description>
        <inlineHelpText>Sum of ratings assigned to each element of the submission document that was assessed; rating scale used for each element is 1=Low to 5=High</inlineHelpText>
        <label>Actual Score</label>
        <summarizedField>IRIS_Assessment_Data__c.Actual_Score__c</summarizedField>
        <summaryForeignKey>IRIS_Assessment_Data__c.Assessment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to assessment.</description>
        <label>Assessment</label>
        <referenceTo>IRIS_Assessment__c</referenceTo>
        <relationshipLabel>Submission Assessments</relationshipLabel>
        <relationshipName>Submission_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Stores the comments for the assessment taken</description>
        <inlineHelpText>Assessor comments of the submission that was assessed; information entered will be viewable to the document owner when a report is generated</inlineHelpText>
        <label>Overall Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Observations__c</fullName>
        <description>The observations made on the assessment.</description>
        <label>Observations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Percentage__c</fullName>
        <formula>(Actual_Score__c/Total_Score__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Actual Score divided by Total Score</inlineHelpText>
        <label>Overall Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Overall_Rating_Number__c</fullName>
        <formula>IF( 
AND((Actual_Score__c/Total_Score__c)*100 &gt;= 0,(Actual_Score__c/Total_Score__c)*100 &lt;= 20) , 
1 , 
IF( 
AND((Actual_Score__c/Total_Score__c)*100 &gt; 20,(Actual_Score__c/Total_Score__c)*100 &lt;= 40) , 
2 , 
IF( 
AND((Actual_Score__c/Total_Score__c)*100 &gt; 40,(Actual_Score__c/Total_Score__c)*100 &lt;= 60) , 
3 , 
IF( 
AND((Actual_Score__c/Total_Score__c)*100 &gt; 60,(Actual_Score__c/Total_Score__c)*100 &lt;= 80) , 
4 , 
IF( 
AND((Actual_Score__c/Total_Score__c)*100 &gt; 80,(Actual_Score__c/Total_Score__c)*100 &lt;= 100) , 
5 , 
null
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>#Overall Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <description>Used to display the image of the rating.</description>
        <formula>IF( 
	AND((Actual_Score__c/Total_Score__c)*100  &gt;= 0,(Actual_Score__c/Total_Score__c)*100  &lt;= 20) , 
	IMAGE(&apos;/resource/IRIS_Rating_Assess/1.png&apos;, &apos;red&apos;, 38, 38) , 
	IF( 
		AND((Actual_Score__c/Total_Score__c)*100  &gt; 20,(Actual_Score__c/Total_Score__c)*100  &lt;= 40) , 
		IMAGE(&apos;/resource/IRIS_Rating_Assess/2.png&apos;,&apos;Orange&apos;, 38, 38) , 
		IF( 
			AND((Actual_Score__c/Total_Score__c)*100  &gt; 40,(Actual_Score__c/Total_Score__c)*100  &lt;= 60) , 
			IMAGE(&apos;/resource/IRIS_Rating_Assess/3.png&apos;, &apos;Yellow&apos;, 38, 38) , 
			IF( 
				AND((Actual_Score__c/Total_Score__c)*100  &gt; 60,(Actual_Score__c/Total_Score__c)*100  &lt;= 80) , 
				IMAGE(&apos;/resource/IRIS_Rating_Assess/4.png&apos;, &apos;Light Green&apos;, 38, 38) , 
				IF( 
					AND((Actual_Score__c/Total_Score__c)*100  &gt; 80,(Actual_Score__c/Total_Score__c)*100  &lt;= 100) , 
					IMAGE(&apos;/resource/IRIS_Rating_Assess/5.png&apos;, &apos;Green&apos;, 38, 38) , 
					&apos;&apos; 
				) 
			) 
		) 
	) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average of the ratings that were assigned</inlineHelpText>
        <label>Overall Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Represents the current status of the assessment</description>
        <inlineHelpText>The status of the Submission Assessment</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In-Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <description>Stores the associated submission record.</description>
        <label>Submission</label>
        <referenceTo>IRIS_Submission__c</referenceTo>
        <relationshipLabel>Submission Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <description>Sum up all the total score from assessment data and stores.</description>
        <inlineHelpText>Highest possible score if each element assessed received a 5=High rating</inlineHelpText>
        <label>Total Score</label>
        <summarizedField>IRIS_Assessment_Data__c.Total_Score__c</summarizedField>
        <summaryForeignKey>IRIS_Assessment_Data__c.Assessment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Submission Assessment</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Submission Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission Assessments</pluralLabel>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>